added WoWClient method "media" to retrieve the image data for media

### Changed
Game specific client methods were changed to rely on the requests.get or requests.post methods instead of the
    requests.request
Updated out of date documentation
Updated BNetClient.__str__() and .__repr__()
move version related variables into the respective client classes
updated localize to allow passing None

### Removed
Duplicate __str__ and __repr__ methods in the children client classes (D3Client, HSClient, SC2Client, and WoWClient)

## [2.0.0] - 2022-01-31
### Added
Diablo 3 API
World of Warcraft Series API
Hearthstone API
StarCraft 2 API

### Changed
Moved original bnet test into their own folder, to prevent conflicts with other parts
Game specific client methods where changed to handle the requests directly

### Removed
BattlenetClient._get
BattlenetClient._post
BattlenetClient.__endpoint


## [1.2.0] - 2021-08-15
### Added
constants.py - added mnemonic constants for the games, and regions
client.py - added str and repr methods

### Changed
util.py - allow localize to except a None type to retrieve all of the locales for an API endpoint
client.py - rewrite of endpoint
          - updated changes for constants
exceptions.py - added BNetNegativeIndexError, and BNetNoDataFoundError

### Removed
None

## [1.1.0] - 2021-07-15
### Added
exceptions.py - for exceptions

### Changed
client.py = _request renamed to endpoint

## [0.0.3] - 2021-06-20
### Added
util.py - for utility functions
tests for the client (need to work on the authorization workflow tests)

### Changed
Moved slugify, localize, currency_convertor into their own file (util.py)
Made modifications class constructor:
  moved standard and condensed into it
  moved client_id and client_secret parameters to positional
  added "release" attribute to allow re-releases of games (ie WoW Classic and TBC as of 2021-Jun
Made modifications to _request:
  added logic for handling locale properly