@@ -4,17 +4,17 @@ Disclaimer:
     All rights reserved, Blizzard is the intellectual property owner of Battle.net and any data
     retrieved from this API.
 """
-from time import sleep
 from requests import Response
 from requests.exceptions import HTTPError
-from io import BytesIO
+from time import sleep
 from decouple import config
 from urllib.parse import unquote
 from oauthlib.oauth2 import BackendApplicationClient
 from requests_oauthlib import OAuth2Session
-from typing import Optional, List, Dict, Union, Any
+from typing import Optional, List
 
 from . import exceptions, constants
+from battlenet_client import utils
 
 
 class BNetClient(OAuth2Session):
@@ -31,14 +31,11 @@ class BNetClient(OAuth2Session):
 
     Attributes:
         tag (str): the region tag (abbreviation) of the client
-        api_host (str): the host to use for accessing the API endpoints
-        auth_host (str): the host to use for authentication
-        render_host (str): the host to use for images
     """
 
     __MAJOR__ = 2
     __MINOR__ = 1
-    __PATCH__ = 0
+    __PATCH__ = 1
 
     def __init__(
         self,
@@ -49,8 +46,6 @@ class BNetClient(OAuth2Session):
         scope: Optional[List[str]] = None,
         redirect_uri: Optional[str] = None,
     ) -> None:
-
-        self.state = None
 
         if not client_id:
             client_id = config("CLIENT_ID")
@@ -66,45 +61,27 @@ class BNetClient(OAuth2Session):
             else:
                 raise exceptions.BNetRegionNotFoundError("Region not available")
 
-        self._client_secret = client_secret
-
-        if self.tag == "cn":
-            self.api_host = "https://gateway.battlenet.com.cn"
-            self.auth_host = "https://www.battlenet.com.cn"
-            self.render_host = "https://render.worldofwarcraft.com.cn"
-        elif self.tag in ("kr", "tw"):
-            self.api_host = f"https://{self.tag}.api.blizzard.com"
-            self.auth_host = "https://apac.battle.net"
-            self.render_host = f"https://render-{self.tag}.worldofwarcraft.com"
-        else:
-            self.api_host = f"https://{self.tag}.api.blizzard.com"
-            self.auth_host = f"https://{self.tag}.battle.net"
-            self.render_host = f"https://render-{self.tag}.worldofwarcraft.com"
-
         if redirect_uri and scope:
-            self.auth_flow = True
-            if "openid" in scope:
-                self._config_endpoint = (
-                    f"{self.auth_host}/.well-known/openid-configuration"
-                )
-                self._jwks = f"{self.api_host}/oauth/jwks/certs"
             super().__init__(
                 client_id=client_id, scope=scope, redirect_uri=redirect_uri
             )
         else:
             super().__init__(client=BackendApplicationClient(client_id=client_id))
             self.fetch_token(
-                token_url=f"{self.auth_host}/oauth/token",
-                client_id=self.client_id,
-                client_secret=self._client_secret,
+                token_url=f"{utils.auth_host(self.tag)}/oauth/token",
+                client_id=client_id,
+                client_secret=client_secret,
             )
-            self.auth_flow = False
 
     def __str__(self) -> str:
         return f"{self.__class__.__name__} {self.tag.upper()} {self.version} API Client"
 
     def __repr__(self) -> str:
-        return f"{self.__str__()} ({'Auth Code Flow' if self.auth_flow else 'Credential Client Flow'})"
+        return f"{self.__str__()} ({'Auth Code Flow' if self.auth_code else 'Credential Client Flow'})"
+
+    @property
+    def auth_code(self):
+        return self._client.grant_type == "authorization_code"
 
     @property
     def version(self):
@@ -117,16 +94,25 @@ class BNetClient(OAuth2Session):
             bool: True of the token is valid, false otherwise.
         """
 
-        url = f"{self.auth_host}/oauth/check_token"
-        data = self.post(
-            url,
-            params={"token": self.access_token},
-            headers={"Battlenet-Namespace": None},
-        )
-        result: bool = (
-            data.status_code == 200 and data.json()["client_id"] == self.client_id
-        )
-        return result
+        url = f"{utils.auth_host(self.tag)}/oauth/check_token"
+        retry = 0
+        while retry < 5:
+            try:
+                data = self.post(
+                    url,
+                    params={"token": self._client.access_token},
+                    headers={"Battlenet-Namespace": None},
+                )
+                data.raise_for_status()
+            except HTTPError as err:
+                if err.response.status_cod == 429:
+                    sleep(1)
+                    retry += 1
+            else:
+                return (
+                    data.status_code == 200
+                    and data.json()["client_id"] == self.client_id
+                )
 
     def authorization_url(self, **kwargs) -> str:
         """Prepares and returns the authorization URL to the Battle.net authorization servers
@@ -137,53 +123,7 @@ class BNetClient(OAuth2Session):
         if not self.auth_flow:
             raise ValueError("Requires Authorization Workflow")
 
-        auth_url = f"{self.auth_host}/oauth/authorize"
-        authorization_url, self.state = super().authorization_url(
-            url=auth_url, **kwargs
+        authorization_url, self._client.state = super().authorization_url(
+            url=f"{utils.auth_host(self.tag)}/oauth/authorize", **kwargs
         )
         return unquote(authorization_url)
-
-    def user_info(self, locale: Optional[str] = None) -> Response:
-        """Returns the user info
-
-        Args:
-            locale (str): localization to use
-
-        Returns:
-            dict: the json decoded information for the user (user # and battle tag ID)
-
-        Notes:
-            this function requires the BattleNet Client to be use OAuth (Authentication Workflow)
-        """
-        if not self.auth_flow:
-            raise exceptions.BNetClientError("Requires Authorization Code Workflow")
-
-        url = f"{self.auth_host}/oauth/userinfo"
-        return self.get(url, params={"locale": locale})
-
-    def request(
-        self, method, url, **kwargs
-    ) -> Union[Response, Dict[str, Any], BytesIO]:
-
-        retries = 0
-
-        while retries < 5:
-            try:
-                response = super().request(method, url, **kwargs)
-                response.raise_for_status()
-            except HTTPError as err:
-                if err.response.status_code == 429:
-                    retries += 1
-                    sleep(1)
-            else:
-                if response.url.startswith(self.api_host):
-                    if response.headers["content-type"].startswith("application/json"):
-                        return response.json()
-
-                if response.url.startswith(self.render_host) or response.url.startswith(
-                    "https://render.worldofwarcraft.com"
-                ):
-                    if response.headers["content-type"] in ("image/jpeg", "image/png"):
-                        return BytesIO(response.content)
-
-                return response
