@@ -57,57 +57,3 @@ class D3Client(BNetClient):
 
         mod = importlib.import_module("battlenet_client.d3.game_data")
         self.game_data_api = getattr(mod, "GameData")(self)
-
-    def game_data(self, locale: str, *args, **kwargs) -> Response:
-        """Generates then necessary game data API URI and keyword args for to pasted on to the client get method
-
-        Args:
-            locale (str): the localization to use for the request
-
-        Returns:
-            dict: the resultant JSON decoded dict
-        """
-        if args[0].startswith("https"):
-            uri = args[0]
-        else:
-            uri = f"{self.api_host}/data/d3/{'/'.join([str(arg) for arg in args if arg is not None])}"
-
-        kwargs["params"]["locale"] = localize(locale)
-
-        return self.get(uri, **kwargs)
-
-    def community(self, locale: str, *args, **kwargs) -> Response:
-        """Generates then necessary community API URI and keyword args for to pasted on to the client get method
-
-        Args:
-            locale (str): the localization to use for the request
-
-        Returns:
-            dict: the resultant JSON decoded dict
-        """
-        if args[0].startswith("https"):
-            uri = args[0]
-        else:
-            uri = f"{self.api_host}/d3/data/{'/'.join([str(arg) for arg in args if arg is not None])}"
-
-        kwargs["params"]["locale"] = localize(locale)
-
-        return self.get(uri, **kwargs)
-
-    def profile_api(self, locale: str, *args, **kwargs) -> Response:
-        """Generates then necessary profile API URI and keyword args for to pasted on to the client get method
-
-        Args:
-            locale (str): the localization to use for the request
-
-        Returns:
-            dict: the resultant JSON decoded dict
-        """
-        if args[0].startswith("https"):
-            uri = args[0]
-        else:
-            uri = f"{self.api_host}/d3/profile/{'/'.join([str(arg) for arg in args if arg is not None])}"
-
-        kwargs["params"]["locale"] = localize(locale)
-
-        return self.get(uri, **kwargs)
